--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,34 @@
 [tool.poetry]
 name = "bioblue"
-version = "0.1.0"
+version = "0.2.0"
 description = ""
 authors = ["Victor Joos <victor.joos@uclouvain.be>"]
 
 [tool.poetry.dependencies]
-python = "^3.6,!=3.6.0"
-torch = "^1.5.1"
+python = ">=3.6.1,<4.0"
+torch = "^1.6.0"
 monai = { extras = ["gdown"], version = "^0.2.0" }
 gdown = "^3.11.1"
 nibabel = "^3.1.1"
-matplotlib = "^3.3.0"
+matplotlib = "^3.3.2"
 scikit-image = "^0.17.2"
 pillow = "^7.2.0"
-pytorch-lightning = "^0.8.5"
+pytorch-lightning = "^0.9.0"
 vtk = "^9.0.1"
 itk = "^5.1.0"
 itk-texturefeatures = "^3.3.1"
 scikit-learn = "^0.23.1"
-hydra-core = "1.0.0rc2"
+hydra-core = "^1.0.3"
 hiplot = "^0.1.18"
 requests = "^2.24.0"
+mlflow = "^1.10.0"
+optuna = "^2.0.0"
+hydra-submitit-launcher = "^1.0.0"
+rich = {extras = ["jupyter"], version = "^8.0.0"}
+rawpy = "^0.15.0"
+SimpleITK = "^2.0.1"
+plotly = "^4.12.0"
+jupyter-dash = "^0.3.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -28,9 +36,14 @@ jupyterlab = "^2.2.0"
 ipympl = "^0.5.7"
 itkwidgets = "^0.31.4"
 black = "^19.10b0"
+jupyterlab-git = "^0.22.2"
 
 [tool.poetry.scripts]
 bioblue = 'bioblue.train:main'
+
+[[tool.poetry.source]]
+name = "forge"
+url = "https://forge.uclouvain.be/api/v4/projects/1124/packages/pypi"
 
 [build-system]
 requires = ["poetry>=0.12"]
