--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ cache:
 
 before_script:
   - python -V  # Print out python version for debugging
-  - poetry install
+  - poetry run pip install -vvv torch
 
 test:
   script:
