--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ before_script:
   - mkdir -p "$TMPDIR" # print tmpdir for debugging
   - python -V  # Print out python version for debugging
   - poetry install
-  - poetry run pip install setuptools
+  - poetry run pip install -U setuptools
 
 test:
   script:
