--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Victor Joos <victor.joos@uclouvain.be>"]
 
 [tool.poetry.dependencies]
 python = ">=3.6.1,<4.0"
-torch = "^1.6.0"
+torch = "~1.6.0"
 monai = { extras = ["gdown"], version = "^0.2.0" }
 gdown = "^3.11.1"
 nibabel = "^3.1.1"
@@ -24,17 +24,17 @@ requests = "^2.24.0"
 mlflow = "^1.10.0"
 optuna = "^2.0.0"
 hydra-submitit-launcher = "^1.0.0"
-rich = {extras = ["jupyter"], version = "^8.0.0"}
+rich = {extras = ["jupyter"], version = "^9.0.0"}
 rawpy = "^0.15.0"
 SimpleITK = "^2.0.1"
 plotly = "^4.12.0"
 jupyter-dash = "^0.3.1"
+itkwidgets = "^0.32.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 jupyterlab = "^2.2.0"
 ipympl = "^0.5.7"
-itkwidgets = "^0.31.4"
 black = "^19.10b0"
 jupyterlab-git = "^0.22.2"
 
