--- a/bioblue/conf/config.yaml
+++ b/bioblue/conf/config.yaml
@@ -1,4 +1,5 @@
 defaults:
   - trainer: local
-  - model: unet
-app: hello
+  - model: conf_unet
+  - module: semantic_blurring
+  - dataset: synthetic
