--- a/bioblue/conf/trainer/local.yaml
+++ b/bioblue/conf/trainer/local.yaml
@@ -1,3 +1,5 @@
-# @package _global_
-trainer:
-  num_gpu: 1
+# @package _group_
+_target_: pytorch_lightning.Trainer
+gpus: 0
+max_epochs: 2
+fast_dev_run: true
