adds required gpus flag

--- a/bioblue/conf/config.yaml
+++ b/bioblue/conf/config.yaml
@@ -1,5 +1,6 @@
 defaults:
-  - trainer: "???"
+  - trainer: default
+  - server: "???"
   - model: conf_unet
   - module: semantic_blurring
   - dataset: synthetic
