--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ jupyter-dash = "^0.3.1"
 itkwidgets = "^0.32.0"
 albumentations = "^0.5.1"
 pyvista = "^0.27.0"
+boto3 = "^1.16.25"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1"
