--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ pyvista = "^0.27.0"
 boto3 = "^1.16.25"
 gorilla = "^0.3.0"
 minio = "^6.0.2"
+filelock = "^3.0.12"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1"
