--- a/bioblue/conf/dataset/synthetic.yaml
+++ b/bioblue/conf/dataset/synthetic.yaml
@@ -7,3 +7,10 @@ val_size: 50
 test_size: 50
 shape: [512, 512]
 batch_size: 4
+points_range: [20, 21]
+links_range: [3, 4]
+max_shapes: 1000
+size_range: [50, 500]
+weight_range: [1, 5]
+bg_intensity_range: [0, 50]
+fg_intensity_range: [0, 256]
