--- a/bioblue/conf/server/local.yaml
+++ b/bioblue/conf/server/local.yaml
@@ -1,9 +1,11 @@
 # @package _global_
 trainer:
   gpus: 0
-  max_epochs: 2
-  limit_train_batches: 2
-  limit_val_batches: 2
   # fast_dev_run: true
 
-exp: test
+callbacks:
+  - _target_: bioblue.callback.MLFlowCallback
+    log_models: false
+  - _target_: pytorch_lightning.callbacks.ModelCheckpoint
+    dirpath: "./models"
+    save_last: true
