--- a/bioblue/conf/dataset/kidneys.yaml
+++ b/bioblue/conf/dataset/kidneys.yaml
@@ -1,5 +1,6 @@
 # @package _group_
-_target_: bioblue.dataset.NumpyDataModule
+_target_: bioblue.dataset.ThresholdableDataModule
 data_dir: "${env:HOME}/projects/bio-blueprints/data"
 directory: "kidneys"
 batch_size: 4
+num_workers: 12
