--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,8 @@
 #     - .cache/pip
 #     - .cache/poetry
 
-before_script:
-  - cd $CECIHOME
+# before_script:
+#   - cd $CECIHOME
 
 update_git:
   script:
