test multiple runs in pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,10 +13,10 @@ before_script:
   - ssh -o ExitOnForwardFailure=yes -f -N -L 9000:localhost:9000 betelgeuse
   - ssh -o ExitOnForwardFailure=yes -f -N -L 5000:localhost:5000 betelgeuse
 
-test_help:
+print_help:
   script:
     - poetry run bioblue --help
-# test:
-#   script:
-#     - poetry run bioblue --version
-#     - poetry run pytest
+
+test:
+  script:
+    - poetry run bioblue env=test
