--- a/bioblue/conf/server/mbacknfs.yaml
+++ b/bioblue/conf/server/mbacknfs.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 gpus: 0
-callback:
+callbacks:
   - _target: bioblue.callback.MLFlowCallback
     log_models: true
   - _target_: pytorch_lightning.callbacks.ModelCheckpoint
