--- a/bioblue/conf/logger/mlflow.yaml
+++ b/bioblue/conf/logger/mlflow.yaml
@@ -2,5 +2,5 @@
 logger:
   _target_: pytorch_lightning.loggers.MLFlowLogger
   experiment_name: "${exp}"
-  tracking_uri: "http://betelgeuse.elen.ucl.ac.be:5000"
+  tracking_uri: "${env:MLFLOW_TRACKING_URI}"
 exp: "???"
