--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,16 +11,15 @@
 before_script:
   - poetry install
   - mkdir -p data
-  # - ssh -o ExitOnForwardFailure=yes -f -N -L 9000:localhost:9000 betelgeuse
-  # - ssh -o ExitOnForwardFailure=yes -f -N -L 5000:localhost:5000 betelgeuse
+  # - ssh -o ExitOnForwardFailure=yes -f -N -L 9000:localhost:9000 betelgeuse || exit_code=$?
+  # - ssh -o ExitOnForwardFailure=yes -f -N -L 5000:localhost:5000 betelgeuse || exit_code=$?
 
 print_help:
   script:
     - poetry run bioblue --cfg all
     - poetry run bioblue --help
     - echo "done"
-
-test:
-  script:
-    - poetry run bioblue -m exp=test hydra/launcher=submitit_slurm
-    - echo "done"
+# test:
+#   script:
+#     - poetry run bioblue -m exp=test
+#     - echo "done"
