--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Victor Joos <victor.joos@uclouvain.be>"]
 
 [tool.poetry.dependencies]
-python = ">=3.6.1,<4.0"
+python = ">=3.6.1,<3.10"
 numpy = "^1.19"
 torch = "~1.7.0"
 monai = { extras = ["gdown"], version = "^0.2.0" }
@@ -37,6 +37,7 @@ minio = "^6.0.2"
 filelock = "^3.0.12"
 ipyaggrid = "^0.2.1"
 Jinja2 = "^2.11.2"
+PySide6 = "^6.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1"
@@ -45,6 +46,7 @@ jupyterlab = "^2.2.0"
 ipympl = "^0.5.7"
 black = "^19.10b0"
 jupyterlab-git = "^0.22.2"
+mypy = "^0.790"
 
 [tool.poetry.scripts]
 bioblue = 'bioblue.train:main'
