--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = ["Victor Joos <victor.joos@uclouvain.be>"]
 [tool.poetry.dependencies]
 python = ">=3.6.1,<3.10"
 numpy = "^1.19"
-torch = "~1.7.0"
+torch = "^1.7.0"
 monai = { extras = ["gdown"], version = "^0.2.0" }
 gdown = "^3.11.1"
 nibabel = "^3.1.1"
@@ -15,29 +15,29 @@ matplotlib = "^3.3.2"
 scikit-image = "^0.17.2"
 pillow = "^7.2.0"
 pytorch-lightning = "^1.0.0"
-vtk = "^9.0.1"
-itk = "^5.1.0"
-itk-texturefeatures = "^3.3.1"
+# vtk = "^9.0.1"
+# itk = "^5.1.0"
+# itk-texturefeatures = "^3.3.1"
 scikit-learn = "^0.23.1"
 hydra-core = "^1.0"
-hiplot = "^0.1.18"
+# hiplot = "^0.1.18"
 mlflow = "^1.10.0"
-optuna = "^2.0.0"
+# optuna = "^2.0.0"
 hydra-submitit-launcher = "^1.0.0"
-rawpy = "^0.15.0"
+# rawpy = "^0.15.0"
 SimpleITK = "^2.0.1"
 plotly = "^4.12.0"
 jupyter-dash = "^0.3.1"
 itkwidgets = "^0.32.0"
-albumentations = "^0.5.1"
-pyvista = "^0.27.0"
+# albumentations = "^0.5.1"
+# pyvista = "^0.27.0"
 boto3 = "^1.16.25"
-gorilla = "^0.3.0"
+# gorilla = "^0.3.0"
 minio = "^6.0.2"
 filelock = "^3.0.12"
 ipyaggrid = "^0.2.1"
 Jinja2 = "^2.11.2"
-PySide6 = "^6.0.0"
+batchgenerators = "^0.21"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1"
