sets Jedi back because of jupyter notebook

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,8 @@ ipyaggrid = "^0.2.1"
 Jinja2 = "^2.11.2"
 batchgenerators = "^0.21"
 SharedArray = "^3.2.1"
+typer = "^0.3.2"
+jedi = "<0.18.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1"
