--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ pytorch-lightning = "^1.0.0"
 scikit-learn = "^0.23.1"
 hydra-core = "^1.0"
 # hiplot = "^0.1.18"
-mlflow = "^1.10.0"
+mlflow = "^1.14.0"
 # optuna = "^2.0.0"
 hydra-submitit-launcher = "^1.0.0"
 # rawpy = "^0.15.0"
@@ -42,6 +42,9 @@ SharedArray = "^3.2.1"
 typer = "^0.3.2"
 jedi = "<0.18.0"
 ipywebrtc = "^0.5.0"
+kornia = "^0.4.1"
+albumentations = "^0.5.2"
+dill = "^0.3.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1"
