--- a/bioblue/conf/logger/mlflow.yaml
+++ b/bioblue/conf/logger/mlflow.yaml
@@ -3,4 +3,9 @@ logger:
   _target_: pytorch_lightning.loggers.MLFlowLogger
   experiment_name: "${exp}"
   tracking_uri: "${env:MLFLOW_TRACKING_URI}"
+  tags:
+    "mlflow.user": "${env:USER}"
+    "mlflow.source.type": "LOCAL"
+    "mlflow.source.git.commit": "${git:commit}"
+    "mlflow.source.git.branch": "${git:branch}"
 exp: "???"
