--- a/bioblue/conf/module/base_segmentation.yaml
+++ b/bioblue/conf/module/base_segmentation.yaml
@@ -1,3 +1,7 @@
 # @package _group_
 _target_: bioblue.module.BaseSegment
 segmenter: "${model}"
+scheduler:
+  _target_: torch.optim.lr_scheduler.MultiStepLR
+  milestones: [10, 30, 50]
+  gamma: 0.1
