--- a/bioblue/conf/dataset/bones.yaml
+++ b/bioblue/conf/dataset/bones.yaml
@@ -1,10 +1,10 @@
 # @package _group_
-data_dir: "${env:HOME}/projects/bio-blueprints/data"
-dataset_name: "Task202_KidneyVessels"
+data_dir: "${env:HOME}/projects/bio-blueprints/data/"
+dataset_name: Task201_BoneVessels
 batch_size: 4
 num_workers: 12
 strategies:
     kfold:
       _target_: bioblue.dataset.KFoldStrategy
       fold: 0
-      folds: 5
+      folds: 2
