--- a/bioblue/conf/dataset/hepaticvessel.yaml
+++ b/bioblue/conf/dataset/hepaticvessel.yaml
@@ -1,4 +1,9 @@
 # @package _group_
-data_dir: "${env:HOME}/projects/bio-blueprints/data/hepaticvessel"
+data_dir: "${env:HOME}/projects/bio-blueprints/data/"
+dataset_name: "hepaticvessel"
 batch_size: 4
 num_workers: 12
+strategies:
+    kfold:
+      _target_: bioblue.dataset.KFoldStrategy
+      folds: 5
