--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,8 @@ kornia = "^0.4.1"
 albumentations = "^0.5.2"
 dill = "^0.3.3"
 torchmetrics = "^0.2.0"
+K3D = "^2.9.4"
+vedo = "^2021.0.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1"
