--- a/bioblue/conf/dataset/kidneys.yaml
+++ b/bioblue/conf/dataset/kidneys.yaml
@@ -1,6 +1,6 @@
 # @package _group_
 data_dir: "${env:HOME}/projects/bio-blueprints/data"
-dataset_name: "Task202_KidneyVessels"
+dataset_name: "Task202_KidneyVessels_RT"
 batch_size: 4
 num_workers: 12
 strategies:
