--- a/bioblue/conf/exp/Threshold.yaml
+++ b/bioblue/conf/exp/Threshold.yaml
@@ -3,25 +3,27 @@ exp: Threshold
 dataset:
   _target_: bioblue.dataset.BioblueDataModule
   train_dataset:
-    _target_: bioblue.dataset.ThresholdableDataset
+    _target_: bioblue.dataset.GlobalThresholdableDataset
     partition: "train"
-    dtypes: ["image", "mip-image"]
+    dtypes: ["image"] # , "mip-image"]
     remove_start: 500
     remove_end: 500
     transforms:
-      - _target_: albumentations.RandomCrop
-        height: 512
-        width: 512
-        p: 0.5
+      # - _target_: albumentations.RandomCrop
+      #   height: 512
+      #   width: 512
+      #   p: 0.5
       - _target_: albumentations.Resize
         height: 512
         width: 512
-    mean: 0.999
-    std: 0.001
+      - _target_: bioblue.dataset.transform.BinarySegmentation
+        keep: 1
+    low: 220
+    high: 220
   val_dataset:
-    _target_: bioblue.dataset.ThresholdableDataset
+    _target_: bioblue.dataset.GlobalThresholdableDataset
     partition: "train"
-    dtypes: ["image", "mip-image"]
+    dtypes: ["segmentation", "image"] # , "mip-image"]
     transforms:
     #   - _target_: albumentations.RandomCrop
     #     height: 512
@@ -30,20 +32,22 @@ dataset:
       - _target_: albumentations.Resize
         height: 512
         width: 512
-    mean: 0.999
-    std: 0.0
+      - _target_: bioblue.dataset.transform.BinarySegmentation
+        keep: 2
+    low: 225
+    high: 226
   test_dataset: ${dataset.val_dataset}
-  strategies:
+  # strategies:
     # visualize:
     #   _target_: bioblue.dataset.VisualizeStrategy
     #   train: 10
     #   val: 10
     #   test: 10
-    mip:
-      _target_: bioblue.dataset.MIPStrategy
-      source_dtype: image
-      dtype_prefix: mip
-      size: 10
+    # mip:
+    #   _target_: bioblue.dataset.MIPStrategy
+    #   source_dtype: image
+    #   dtype_prefix: mip
+    #   size: 10
 model:
   input_format: ["image", "mip-image"]
   output_format: ["segmentation"]
