--- a/bioblue/conf/dataset/kidneys.yaml
+++ b/bioblue/conf/dataset/kidneys.yaml
@@ -1,10 +1,47 @@
 # @package _group_
+_target_: bioblue.dataset.BioblueDataModule
 data_dir: "${env:HOME}/projects/bio-blueprints/data"
 dataset_name: "Task202_KidneyVessels_RT"
-batch_size: 4
+batch_size: 8
 num_workers: 12
+fold: "???"
 strategies:
     kfold:
       _target_: bioblue.dataset.KFoldStrategy
-      fold: 0
+      fold: ${dataset.fold}
       folds: 5
+  # visualize:
+  #   _target_: bioblue.dataset.VisualizeStrategy
+  #   train: 10
+  #   val: 10
+  #   test: 10
+  # mip:
+  #   _target_: bioblue.dataset.MIPStrategy
+  #   source_dtype: image
+  #   dtype_prefix: mip
+  #   size: 10
+train_dataset:
+  _target_: bioblue.dataset.GlobalThresholdableDataset
+  partition: "train"
+  dtypes: ["image"]
+  remove_start: 500
+  remove_end: 500
+  transforms:
+    - _target_: albumentations.Resize
+      height: 512
+      width: 512
+    - _target_: bioblue.dataset.transform.BinarySegmentation
+      keep: 1
+  low: 230
+  high: 250
+val_dataset:
+  _target_: bioblue.dataset.MultipleNumpyDataset
+  partition: "train"
+  dtypes: ["segmentation", "image"]
+  transforms:
+    - _target_: albumentations.Resize
+      height: 512
+      width: 512
+    - _target_: bioblue.dataset.transform.BinarySegmentation
+      keep: 2
+test_dataset: ${dataset.val_dataset}
