--- a/bioblue/conf/module/base_segmentation.yaml
+++ b/bioblue/conf/module/base_segmentation.yaml
@@ -11,3 +11,5 @@ scheduler:
   _target_: torch.optim.lr_scheduler.MultiStepLR
   milestones: [10, 30, 50]
   gamma: 0.1
+lr: 1.e-4
+class_weights: [1,1]
