Adds igraph to dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ dill = "^0.3.3"
 torchmetrics = "^0.2.0"
 K3D = "^2.9.4"
 vedo = "^2021.0.2"
+python-igraph = "^0.9.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1"
