Long time no commit

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Victor Joos <victor.joos@uclouvain.be>"]
 
 [tool.poetry.dependencies]
-python = ">=3.6.2,<3.10"
+python = ">=3.7,<3.10"
 numpy = "^1.19"
 torch = "1.7.1"
 monai = "0.5.0"
@@ -21,7 +21,7 @@ pytorch-lightning = "^1.0.0"
 scikit-learn = "^0.23.1"
 hydra-core = "^1.0"
 # hiplot = "^0.1.18"
-mlflow = "^1.14.0"
+mlflow = "^1.19.0"
 # optuna = "^2.0.0"
 hydra-submitit-launcher = "^1.0.0"
 # rawpy = "^0.15.0"
@@ -43,13 +43,18 @@ typer = "^0.3.2"
 jedi = "<0.18.0"
 ipywebrtc = "^0.5.0"
 kornia = "^0.4.1"
-albumentations = "^0.5.2"
+albumentations = "^1.0.3"
 dill = "^0.3.3"
 torchmetrics = "^0.2.0"
 K3D = "^2.9.4"
 vedo = "^2021.0.2"
 python-igraph = "^0.9.4"
 seaborn = "^0.11.1"
+numba = "^0.53.1"
+scipy = "^1.7.0"
+streamlit = "^0.85.1"
+streamlit-drawable-canvas = "^0.8.0"
+opencv-python = "^4.5.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1"
@@ -60,6 +65,7 @@ black = "^19.10b0"
 jupyterlab-git = "^0.22.2"
 mypy = "^0.790"
 kaggle = "^1.5.10"
+jupytext = "^1.11.3"
 
 [tool.poetry.scripts]
 bioblue = 'bioblue.train:main'
