--- a/bioblue/conf/module/base_segmentation.yaml
+++ b/bioblue/conf/module/base_segmentation.yaml
@@ -7,9 +7,9 @@ segmenter: "${model}"
 #   to_onehot_y: true
 #   softmax: true
   # ce_weight: [1.0, 5.0]
-scheduler:
-  _target_: torch.optim.lr_scheduler.MultiStepLR
-  milestones: [10, 30, 50]
-  gamma: 0.1
+# scheduler:
+#   _target_: torch.optim.lr_scheduler.MultiStepLR
+#   milestones: [10, 30, 50]
+#   gamma: 0.1
 lr: 1.e-4
-class_weights: [1,1]
+class_weights: [1,1,1]
