--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,17 +11,17 @@ torch = "1.7.1"
 monai = "0.5.0"
 gdown = "^3.11.1"
 nibabel = "^3.1.1"
-matplotlib = "^3.3.2"
+matplotlib = "^3.4.3"
 scikit-image = "^0.17.2"
 pillow = "^7.2.0"
-pytorch-lightning = "^1.0.0"
+pytorch-lightning = "^1.4.2"
 # vtk = "^9.0.1"
 # itk = "^5.1.0"
 # itk-texturefeatures = "^3.3.1"
 scikit-learn = "^0.23.1"
-hydra-core = "^1.0"
+hydra-core = "^1.1.1"
 # hiplot = "^0.1.18"
-mlflow = "^1.19.0"
+mlflow = "^1.20.2"
 # optuna = "^2.0.0"
 hydra-submitit-launcher = "^1.0.0"
 # rawpy = "^0.15.0"
@@ -45,7 +45,7 @@ ipywebrtc = "^0.5.0"
 kornia = "^0.4.1"
 albumentations = "^1.0.3"
 dill = "^0.3.3"
-torchmetrics = "^0.2.0"
+torchmetrics = "^0.5.0"
 K3D = "^2.9.4"
 vedo = "^2021.0.2"
 python-igraph = "^0.9.4"
@@ -55,6 +55,7 @@ scipy = "^1.7.0"
 streamlit = "^0.85.1"
 streamlit-drawable-canvas = "^0.8.0"
 opencv-python = "^4.5.3"
+umap-learn = "^0.5.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1"
