--- a/bioblue/conf/dataset/kidneys.yaml
+++ b/bioblue/conf/dataset/kidneys.yaml
@@ -1,6 +1,5 @@
-# @package _group_
 _target_: bioblue.dataset.BioblueDataModule
-data_dir: "${env:HOME}/projects/bio-blueprints/data"
+data_dir: "${oc.env:HOME}/projects/bio-blueprints/data"
 dataset_name: "Task202_KidneyVessels_RT"
 batch_size: 8
 num_workers: 12
