--- a/bioblue/conf/dataset/synthetic_lines.yaml
+++ b/bioblue/conf/dataset/synthetic_lines.yaml
@@ -1,6 +1,5 @@
-# @package _group_
 _target_: bioblue.dataset.SyntheticDataModule
-data_dir: "${env:HOME}/projects/bio-blueprints/data"
+data_dir: "${oc.env:HOME}/projects/bio-blueprints/data"
 directory: "synthetic"
 train_size: 50
 val_size: 50
