--- a/bioblue/conf/logger/mlflow.yaml
+++ b/bioblue/conf/logger/mlflow.yaml
@@ -2,9 +2,9 @@
 logger:
   _target_: pytorch_lightning.loggers.MLFlowLogger
   experiment_name: "${exp}"
-  tracking_uri: "${env:MLFLOW_TRACKING_URI}"
+  tracking_uri: "${oc.env:MLFLOW_TRACKING_URI}"
   tags:
-    "mlflow.user": "${env:USER}"
+    "mlflow.user": "${oc.env:USER}"
     "mlflow.source.type": "LOCAL"
     "mlflow.source.git.commit": "${git:commit}"
     "mlflow.source.git.branch": "${git:branch}"
