--- a/bioblue/conf/server/mbacknfs.yaml
+++ b/bioblue/conf/server/mbacknfs.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 gpus: 1
 dataset:
-  data_dir: "${env:CI_PROJECT_DIR}/data"
+  data_dir: "${oc.env:CI_PROJECT_DIR}/data"
 hydra:
   job:
     env_set:
