--- a/bioblue/conf/trainer/default.yaml
+++ b/bioblue/conf/trainer/default.yaml
@@ -1,1 +1,26 @@
 _target_: pytorch_lightning.Trainer
+log_gpu_memory: null
+auto_lr_find: false
+auto_scale_batch_size: false
+auto_select_gpus: false
+benchmark: false
+fast_dev_run: false
+max_epochs: null
+min_epochs: null
+max_steps: null
+min_steps: null
+max_time: null
+limit_train_batches: 1.0
+limit_val_batches: 1.0
+limit_test_batches: 1.0
+limit_predict_batches: 1.0
+val_check_interval: 1.0
+sync_batchnorm: false
+precision: 32
+weights_save_path: null
+num_sanity_val_steps: 2
+reload_dataloaders_every_n_epochs: 0
+reload_dataloaders_every_epoch: false
+prepare_data_per_node: true
+overfit_batches: 0.0
+deterministic: false
