--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["Victor Joos <victor.joos@uclouvain.be>"]
 python = ">=3.7,<3.10"
 numpy = "^1.19"
 torch = "1.7.1"
-monai = "0.5.0"
+monai = "^0.8.0"
 gdown = "^3.11.1"
 nibabel = "^3.1.1"
 matplotlib = "^3.4.3"
@@ -26,7 +26,7 @@ mlflow = "^1.20.2"
 hydra-submitit-launcher = "^1.0.0"
 # rawpy = "^0.15.0"
 SimpleITK = "^2.0.1"
-plotly = "^4.12.0"
+plotly = "^5.4.0"
 jupyter-dash = "^0.3.1"
 itkwidgets = "^0.32.0"
 # albumentations = "^0.5.1"
@@ -56,6 +56,12 @@ streamlit = "^0.85.1"
 streamlit-drawable-canvas = "^0.8.0"
 opencv-python = "^4.5.3"
 umap-learn = "^0.5.1"
+dash = "^2.0.0"
+diskcache = "^5.3.0"
+psutil = "^5.8.0"
+multiprocess = "^0.70.12"
+torchio = "^0.18.71"
+tensorboard = "^2.7.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1"
