--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = ["Victor Joos <victor.joos@uclouvain.be>"]
 [tool.poetry.dependencies]
 python = ">=3.7,<3.10"
 numpy = "^1.19"
-torch = "1.7.1"
+torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.11.0%2Bcu113-cp38-cp38-linux_x86_64.whl", markers = "sys_platform == 'linux'"}
 monai = "^0.8.0"
 gdown = "^3.11.1"
 nibabel = "^3.1.1"
@@ -23,7 +23,7 @@ hydra-core = "^1.1.1"
 # hiplot = "^0.1.18"
 mlflow = "^1.20.2"
 # optuna = "^2.0.0"
-hydra-submitit-launcher = "^1.0.0"
+hydra-submitit-launcher = "^1.1.6"
 # rawpy = "^0.15.0"
 SimpleITK = "^2.0.1"
 plotly = "^5.4.0"
@@ -44,7 +44,7 @@ jedi = "<0.18.0"
 ipywebrtc = "^0.5.0"
 kornia = "^0.4.1"
 albumentations = "^1.0.3"
-dill = "^0.3.3"
+dill = "^0.3.4"
 torchmetrics = "^0.5.0"
 K3D = "^2.9.4"
 vedo = "^2021.0.2"
@@ -60,8 +60,8 @@ dash = "^2.0.0"
 diskcache = "^5.3.0"
 psutil = "^5.8.0"
 multiprocess = "^0.70.12"
-torchio = "^0.18.71"
 tensorboard = "^2.7.0"
+submitit = "^1.4.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1"
