--- a/bioblue/conf/trainer/default.yaml
+++ b/bioblue/conf/trainer/default.yaml
@@ -1,26 +1,52 @@
 _target_: pytorch_lightning.Trainer
+accumulate_grad_batches: null
+amp_backend: "native"
+amp_level: null
 log_gpu_memory: null
 auto_lr_find: false
 auto_scale_batch_size: false
 auto_select_gpus: false
-benchmark: false
+benchmark: null
+enable_checkpointing: true # current code creates a ModelCheckpoint manually
+check_val_every_n_epoch: 1
+detect_anomaly: false
+deterministic: false
 fast_dev_run: false
+gpus: null
+gradient_clip_val: null
+gradient_clip_algorithm: null
+
+limit_train_batches: null
+limit_val_batches: null
+limit_test_batches: null
+limit_predict_batches: null
+
+log_every_n_steps: 20
+enable_progress_bar: true
+profiler: null
+overfit_batches: 0.0
+plugins: null
+precision: 32
+
 max_epochs: null
 min_epochs: null
-max_steps: null
+max_steps: -1
 min_steps: null
 max_time: null
-limit_train_batches: 1.0
-limit_val_batches: 1.0
-limit_test_batches: 1.0
-limit_predict_batches: 1.0
-val_check_interval: 1.0
-sync_batchnorm: false
-precision: 32
-weights_save_path: null
+
+num_nodes: 1
+num_processes: null
 num_sanity_val_steps: 2
 reload_dataloaders_every_n_epochs: 0
-reload_dataloaders_every_epoch: false
-prepare_data_per_node: true
-overfit_batches: 0.0
-deterministic: false
+
+strategy: null
+sync_batchnorm: false
+track_grad_norm: -1
+
+val_check_interval: 1.0
+
+enable_model_summary: true
+weights_save_path: null
+
+move_metrics_to_cpu: false
+multiple_trainloader_mode: "max_size_cycle"
