TMP: Working on DICE loss

--- a/bioblue/conf/config.yaml
+++ b/bioblue/conf/config.yaml
@@ -15,6 +15,6 @@ hydra:
     env_set:
       AWS_ACCESS_KEY_ID: vjoosdtb
       AWS_SECRET_ACCESS_KEY: qsdfghjk
-      MLFLOW_S3_ENDPOINT_URL: "http://betelgeuse.elen.ucl.ac.be:9000"
-      MLFLOW_TRACKING_URI: "http://betelgeuse.elen.ucl.ac.be:5000"
+      MLFLOW_S3_ENDPOINT_URL: "http://localhost:9000"
+      MLFLOW_TRACKING_URI: "http://localhost:5000"
       MLFLOW_S3_IGNORE_TLS: "true"
