--- a/bioblue/conf/exp/deepsun3.yaml
+++ b/bioblue/conf/exp/deepsun3.yaml
@@ -4,33 +4,22 @@ trainer:
   max_epochs: 30
   gpus: ${gpus}
   auto_scale_batch_size: false
+  log_every_n_steps: 2
 
-# module:
-#   lr: 1.e-3
-#   loss:
-#     _target_: segmentation_models_pytorch.losses.dice.DiceLoss
-#     mode : "multiclass"
-#     classes: [1,2,3]
-#     ignore_index: 0
 
 module:
-  lr: 1.e-3
+  lr: 1.e-5
+  optimizer: 'torch.optim.Adam'
   loss:
-    # _target_: torch.nn.CrossEntropyLoss # <--- WORKS
-    # _target_: bioblue.loss.DiceCELoss
-    _target_: bioblue.loss.GeneralizedDiceLoss
-    # _target_: monai.losses.DiceLoss
-    # ignore_index: 3
-    # include_background: falsce sone
-    include_background: false
-    softmax: true
-    # to_onehot_y : true
+    _target_: torch.nn.CrossEntropyLoss # <--- WORKS
+    # ignore_index: 0
+  class_weights: [1,50,50]
 
 model:
   input_format: ["image"]
   output_format: ["segmentation"]
   # classes: ["penumbra", "umbra"]
-  classes: [ "penumbra", "umbra", "ignore"]
+  classes: [ "penumbra", "umbra"]
   _target_: bioblue.model.ConfUnet
   model_cfg:
     _target_: bioblue.model.ModelConfig
@@ -48,49 +37,48 @@ model:
       width: [512, 512, 256, 128, 64, 32]
       repeat: [1, 1, 1, 1, 1, 1]
 
-  # architecture:
-  #   first: 32 
-  #   enc:
-  #     width: [16, 32, 48, 96]
-  #     repeat: [2, 3, 3, 4]
-  #   dec:
-  #     width: [48, 32, 32]
-  #     repeat: [2, 2, 1]
-
 
 use_dtypes: "???"
 
 dataset:
   _target_: bioblue.dataset.BioblueDataModule
-  data_dir: "/DATA/datasets/niels/Deepsun/bioblue/"
-  dataset_name: "ManualAnnotation"
-  # dataset_name: "2013"
-  batch_size: 2
-  num_workers: 3
+  # data_dir: "/globalscratch/users/n/s/nsayez/deepsun_bioblue"datasets/niels/Deepsun/"
+  # dataset_name: "All"
+  data_dir: "/DATA/datasets/niels/Deepsun/bioblue"
+  dataset_name: "2013"
+
+  batch_size: 8
+  num_workers: 12
   
   train_dataset:
     _target_: bioblue.dataset.DeepsunSegmentationDataset
-    partition: "test_GT"
+    partition: "train"
+    dtypes: ${use_dtypes}
+
+    transforms:
+      - _target_: bioblue.transforms.DeepsunCropNonEmptyMaskIfExists
+        height: 512
+        width: 512
+        
+
+  val_dataset:
+    _target_: bioblue.dataset.DeepsunSegmentationDataset
+    # \/!\/!\/!\/!\/!\/ When training make sure that this partition refers to folder containing ALL types of segmentation, and the folder with GT is named "test_GT"
+    # \/!\/!\/!\/!\/!\/ BUT When comparing with manual GT -> CHANGE NAME OF FOLDERS SUCH THAT the one with GT is named test and the other is named "test_training"
+    partition: "test"
     dtypes: ${use_dtypes}
     transforms:
       - _target_: bioblue.transforms.DeepsunCropNonEmptyMaskIfExists
         height: 512
         width: 512
-      - _target_: bioblue.transforms.DeepsunMaskMerger
-        p_add: 0.5
-  val_dataset:
+  test_dataset: 
     _target_: bioblue.dataset.DeepsunSegmentationDataset
-    # \/!\/!\/!\/!\/!\/ When training make sure that this partition refers to folder containing ALL types of segmentation, and the folder with GT is named "test_GT"
-    # \/!\/!\/!\/!\/!\/ BUT When comparing with manual GT -> CHANGE NAME OF FOLDERS SUCH THAT the one with GT is named test and the other is named "test_training"
     partition: "test_GT"
-    dtypes: ${use_dtypes}    
+    dtypes: ['image', 'GroundTruth']
     transforms:
       - _target_: bioblue.transforms.DeepsunCropNonEmptyMaskIfExists
         height: 512
         width: 512
-      - _target_: bioblue.transforms.DeepsunMaskMerger
-        p_add: 0.5
-  test_dataset: ${dataset.val_dataset}
 
 callbacks:
   model_checkpoint:
