--- a/bioblue/conf/exp/deepsun4.yaml
+++ b/bioblue/conf/exp/deepsun4.yaml
@@ -4,33 +4,59 @@ trainer:
   max_epochs: 30
   gpus: ${gpus}
   auto_scale_batch_size: false
+  log_every_n_steps: 2
 
-# module:
-#   lr: 1.e-3
-#   loss:
-#     _target_: segmentation_models_pytorch.losses.dice.DiceLoss
-#     mode : "multiclass"
-#     classes: [1,2,3]
-#     ignore_index: 0
 
 module:
-  lr: 1.e-3
+  # ######## WORKS
+  lr: 1.e-5
   loss:
-    # _target_: torch.nn.CrossEntropyLoss # <--- WORKS
-    # _target_: bioblue.loss.DiceCELoss
-    _target_: bioblue.loss.GeneralizedDiceLoss
-    # _target_: monai.losses.DiceLoss
-    # ignore_index: 3
-    # include_background: falsce sone
-    include_background: false
-    softmax: true
-    # to_onehot_y : true
+    _target_: torch.nn.CrossEntropyLoss # <--- WORKS
+    # _target_: torch.nn.BCELoss 
+    # ignore_index: 0
+  class_weights: [1,20]
+  # ########
+  # loss:
+  #   _target_: bioblue.loss.CombineLosses
+  #   sublossA: 
+  #     _target_: torch.nn.CrossEntropyLoss
+  #     # class_weights: [1,20,20]
+  #   sublossB: 
+  #     _target_: bioblue.loss.TverskyLossV3
+  #     alpha: 0.3
+  #     beta: 0.7
+  #     include_background: false
+  #     softmax: true
+  #     to_onehot_target: true
+  #   ce_ratio: 0.5
+  #   include_background: false
+  # class_weights: [1,20,20]
+  ##############
+  # loss:
+  #   _target_: bioblue.loss.ComboLoss  
+  #   ce_ratio: 0.5
+  #   alpha: 0.6
+  #   include_background: true
+  #   softmax: true
+  #   to_onehot_target: true
+    
+  # ########
+  # loss:
+  #   _target_: bioblue.loss.LogCosHDiceLoss
+  #   softmax: true
+  #   to_onehot_target: true
+  #   include_background: false
+
+  # scheduler:
+  #   _target_: torch.optim.lr_scheduler.MultiStepLR
+  #   milestones: [10, 30, 50]
+  #   gamma: 0.1
 
 model:
   input_format: ["image"]
   output_format: ["segmentation"]
-  # classes: ["penumbra", "umbra"]
-  classes: [ "penumbra", "umbra", "ignore"]
+  # classes: [ "penumbra", "umbra"]
+  classes: [ "sunspot"]
   _target_: bioblue.model.ConfUnet
   model_cfg:
     _target_: bioblue.model.ModelConfig
@@ -40,22 +66,10 @@ model:
     enc:
       width: [32, 64, 128, 256, 512, 512, 512]
       repeat: [1,1,1,1,1,1,1]
-      # width: [32, 64, 128, 256, 512]
-      # repeat: [1,1,1,1,1]
     dec:
-      # width: [ 256, 128, 64, 32]
-      # repeat: [ 1, 1, 1, 1]
       width: [512, 512, 256, 128, 64, 32]
       repeat: [1, 1, 1, 1, 1, 1]
 
-  # architecture:
-  #   first: 32 
-  #   enc:
-  #     width: [16, 32, 48, 96]
-  #     repeat: [2, 3, 3, 4]
-  #   dec:
-  #     width: [48, 32, 32]
-  #     repeat: [2, 2, 1]
 
 
 use_dtypes: "???"
@@ -64,26 +78,30 @@ dataset:
   _target_: bioblue.dataset.BioblueDataModule
   data_dir: "/DATA/datasets/niels/Deepsun/bioblue/"
   dataset_name: "ManualAnnotation"
-  # dataset_name: "2013"
-  batch_size: 2
+  batch_size: 6
   num_workers: 3
   
   train_dataset:
     _target_: bioblue.dataset.DeepsunSegmentationDataset
     partition: "test_GT"
     dtypes: ${use_dtypes}
+
     transforms:
       - _target_: bioblue.transforms.DeepsunCropNonEmptyMaskIfExists
         height: 512
         width: 512
       - _target_: bioblue.transforms.DeepsunMaskMerger
         p_add: 0.5
+      - _target_: bioblue.transforms.DeepsunRandomFlip
+      - _target_: bioblue.transforms.DeepsunRandomRotate
+        
+
   val_dataset:
     _target_: bioblue.dataset.DeepsunSegmentationDataset
     # \/!\/!\/!\/!\/!\/ When training make sure that this partition refers to folder containing ALL types of segmentation, and the folder with GT is named "test_GT"
     # \/!\/!\/!\/!\/!\/ BUT When comparing with manual GT -> CHANGE NAME OF FOLDERS SUCH THAT the one with GT is named test and the other is named "test_training"
     partition: "test_GT"
-    dtypes: ${use_dtypes}    
+    dtypes: ${use_dtypes}
     transforms:
       - _target_: bioblue.transforms.DeepsunCropNonEmptyMaskIfExists
         height: 512
