--- a/bioblue/conf/exp/deepsun4.yaml
+++ b/bioblue/conf/exp/deepsun4.yaml
@@ -6,6 +6,13 @@ trainer:
   auto_scale_batch_size: false
   log_every_n_steps: 2
 
+logger:
+  - _target_: pytorch_lightning.loggers.WandbLogger
+    name: 'test'
+    project: 'Deepsun'
+    save_dir: "."
+
+
 
 module:
   # ######## WORKS
@@ -87,13 +94,13 @@ dataset:
     dtypes: ${use_dtypes}
 
     transforms:
+      - _target_: bioblue.transforms.DeepsunRandomFlip
+      - _target_: bioblue.transforms.DeepsunRandomRotate
       - _target_: bioblue.transforms.DeepsunCropNonEmptyMaskIfExists
         height: 512
         width: 512
       - _target_: bioblue.transforms.DeepsunMaskMerger
         p_add: 0.5
-      - _target_: bioblue.transforms.DeepsunRandomFlip
-      - _target_: bioblue.transforms.DeepsunRandomRotate
         
 
   val_dataset:
@@ -111,6 +118,9 @@ dataset:
   test_dataset: ${dataset.val_dataset}
 
 callbacks:
+  wandb:
+    _target_: bioblue.callback.WandBCallback
+    log_models: false
   model_checkpoint:
     _target_: pytorch_lightning.callbacks.ModelCheckpoint
     dirpath: "./models"
